not showing how many files restored

--- a/public/index.html
+++ b/public/index.html
@@ -266,6 +266,40 @@
       cursor: not-allowed;
     }
 
+    .btn.loading {
+      position: relative;
+      color: transparent !important;
+      pointer-events: none;
+    }
+
+    .btn.loading::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 14px;
+      height: 14px;
+      border: 2px solid transparent;
+      border-top-color: currentColor;
+      border-radius: 50%;
+      animation: btn-loading-spin 1s linear infinite;
+      color: var(--text) !important;
+    }
+
+    .btn-danger.loading::before {
+      color: white !important;
+    }
+
+    .btn-primary.loading::before {
+      color: var(--bg) !important;
+    }
+
+    @keyframes btn-loading-spin {
+      0% { transform: translate(-50%, -50%) rotate(0deg); }
+      100% { transform: translate(-50%, -50%) rotate(360deg); }
+    }
+
     /* Tables */
     .table-container {
       background: var(--surface);
